<resources>
    <string name="app_name">AxezzibleRestaurants</string>
    <string name="addNewResButton">Add new</string>
    <string name="showMapButton">Show map</string>
    <string name="returnToList">Return to list</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="postalCode">Postal code</string>
    <string name="city">City</string>
    <string name="type">Type</string>
    <string name="rating">Rating</string>
    <string name="guideDogsAllowed">Guide dogs allowed</string>
    <string name="accessible">Accessible</string>
    <string name="save">Save</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="addImage">Add image</string>
    <string name="detailsButton">More info</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="showOnMap">Show on map</string>
    <string name="moreReviews">Show more reviews</string>
    <string name="phone">Phone number</string>
    <string name="eMail">Email address</string>
    <string name="WebUrl">Homepage</string>
    <string name="description">Description</string>
    <string name="goBack">Go back</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="signOut">Sign out</string>
</resources>