<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewRestaurant">

    <Button
        android:id="@+id/returnToListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/returnToList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnToListButton" />

    <EditText
        android:id="@+id/postalCodeEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/postalCode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />

    <EditText
        android:id="@+id/WebUrlEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/WebUrl"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnToListButton" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalCodeEditText" />

    <EditText
        android:id="@+id/typeEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/type"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <RatingBar
        android:id="@+id/addNewRating"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="241dp"
        android:layout_height="55dp"
        android:layout_marginTop="196dp"
        android:max="5"
        android:min="0"
        android:numStars="5"
        android:progressTint="#FFEB3B"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText" />

    <ImageView
        android:id="@+id/addRestaurantImage"
        android:layout_width="128dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideDogsAllowedSwitch"
        app:srcCompat="@drawable/ic_baseline_delete_24" />

    <Button
        android:id="@+id/addImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/addImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessibleSwitch" />

    <Switch
        android:id="@+id/accessibleSwitch"
        android:layout_width="175dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/accessible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewRating" />

    <Switch
        android:id="@+id/guideDogsAllowedSwitch"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        android:text="@string/guideDogsAllowed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewRating" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#16D21E"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/cityEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeEditText" />

    <EditText
        android:id="@+id/eMailEditText"
        android:layout_width="167dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/eMail"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="381dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WebUrlEditText" />

    <EditText
        android:id="@+id/addNewReviewEditText"
        android:layout_width="380dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/review"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>